- Replace PCNT quadrature encoder code with AS5600 absolute angle encoders on TCA9548A (0x70) - Unwrap AS5600 12-bit angles and publish per-period deltas as ENC fields - Keep holonomic drive command protocol: V,vx,vy,wz (+ deadman) - Keep dual VL53L0X ToF with XSHUT address assignment and filtering - Keep BMI160 gyro yaw integration + startup bias calibration - Keep gate servo command G,pos and emergency stop X - Publish stable 20Hz status frame: TOF/IMU/ENC/HALL/GATE

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,23 +1,20 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:esp32dev]
-platform = espressif32
+platform = espressif32@^6.6.0
 board = esp32dev
 framework = arduino
+
 monitor_speed = 115200
-upload_port = /devf/ttyUSB0
-	
-	lib_deps =
-	adafruit/Adafruit VL53L0X
-	adafruit/Adafruit BusIO@^1.17.4
-lib_deps = 
-	adafruit/Adafruit BusIO@^1.17.4
-	adafruit/Adafruit_VL53L0X@^1.2.4
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
+
+monitor_filters =
+  time
+  colorize
+
+lib_deps =
+  adafruit/Adafruit VL53L0X@^1.2.4
+  adafruit/Adafruit BMI160@^2.2.2
+  adafruit/Adafruit Unified Sensor@^1.1.14
+  adafruit/Adafruit BusIO@^1.17.4
+  robtillaart/AS5600@^0.6.2
+  madhephaestus/ESP32Servo@^3.0.6
